agregue el proceso de login usando token para las peticiones

--- a/NirvanaMAUIApp/NirvanaMAUIApp.csproj
+++ b/NirvanaMAUIApp/NirvanaMAUIApp.csproj
@@ -65,4 +65,8 @@
         <PackageReference Include="MudBlazor" Version="6.19.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\Images\" />
+    </ItemGroup>
+
 </Project>
